Fix https://github.com/Tradeshift/tradeshift-ui/issues/132

--- a/src/runtime/less/ts-topbar.less
+++ b/src/runtime/less/ts-topbar.less
@@ -97,6 +97,12 @@
 					cursor: pointer;
 				}
 			}
+			&.ts-add-tab {
+				max-width: none !important;
+				i {
+					top: 0 !important;
+				}
+			}
 		}
 		.ts-button {
 			padding: @ts-unit-half;
